--- a/R-session-02-markdown.Rmd
+++ b/R-session-02-markdown.Rmd
@@ -56,19 +56,6 @@ options(htmltools.dir.version = FALSE)
    }
 ```
 
-```{r, echo=FALSE}
-# All presentations done with Xaringan
-# See Wiki - https://github.com/yihui/xaringan/wiki
-
-# css: [default, metropolis, metropolis-fonts, "metropolis-dv.css"]
-
-# Styles for code highlighting : https://github.com/gnab/remark/wiki/Configuration
-
-# Visualize : https://jmblog.github.io/color-themes-for-google-code-prettify/
-
-
-
-```
 # Fundamental of Data Science for EESS
 
 
@@ -95,31 +82,443 @@ knitr::include_graphics("img/logo_SBR.png")
 ]
 
 ---
-layout: true
 
-# Outline
+class: middle
 
----
+## Outline
 
 
 .font150[
-* What is R and why use R ?
-* Resources
-* Get started
+* What is Markown ?
+* R markdown
 * What can you do with R markdown ?
 ]
+
+---
+
+# Installation and Resources
+
+.pull-left[
+## Packages
+
+* rmarkdown (will install also knitr)
+* tinytex (Latex)
+    
+
+## Resources
+On-line Book: https://bookdown.org/yihui/rmarkdown]
+
+.pull-right[
+
+```{r echo=FALSE, fig.align="center", fig.cap="", out.width='50%'}
+knitr::include_graphics('img/R-markdown-book.png')
+```
+]
+
 ---
 layout: true
+background: url(img/logo-markdown.png)
 
-# Introduction
+# What is markdown ?
+
+---
+
+.center[
+```{r echo=FALSE, fig.cap="", out.width='20%'}
+knitr::include_graphics('img/markdown-John_Gruber.jpg')
+knitr::include_graphics('img/markdown-Aaron_Swartz.jpg')
+```
+]
+
+* Created in 2004 by [John Gruber](https://en.wikipedia.org/wiki/John_Gruber) and [Aaron Swartz](https://en.wikipedia.org/wiki/Aaron_Swartz)
+
+* Goal : "to write using an easy-to-read and easy-to-write plain text format, optionally convert it to structurally valid HTML".
+
+--
+
+## Many flavors...
+
+* MultiMarkdown
+* GitHub Flavored Markdown (GFM)
+* Pandoc
+* CommonMark
+
+---
+layout: true
+# Markdown syntax
 
 ---
 
+* Quick guide: https://www.markdownguide.org/basic-syntax/
+
+## Headings
+
+```{r, eval=FALSE}
+# Heading - level 1   
+
+## Heading - level 2
+```
+--
+ 
+## Heading - level 1
+ 
+### Heading - level 2
 
 ---
+
+## Paragraphs
+
+```{r, eval=FALSE}
+Paragraphs are separated
+by a blank line.
+
+Two spaces at the end of a line  
+produces a line break.
+```
+--
+
+Paragraphs are separated
+by a blank line.
+
+Two spaces at the end of a line  
+produces a line break.
+
+---
+
+## Formatting
+
+```{r, eval=FALSE}
+_italic_, *italic*, **bold**, `monospace`.
+```
+
+--
+
+_italic_, *italic*, **bold**, `monospace`.
+
+.warning[Do not mix straight and backward quotes]
+
+---
+
+## Bullet lists
+  
+```{r, eval=FALSE}  
+Bullet list:
+
+  * apples
+  * oranges
+  * pears
+      * passe crassane (4 spaces to indent)
+```
+
+--
+
+* apples
+* oranges
+* pears
+    * passe crassane
+
+---
+
+## Numbered lists
+
+```{r, eval=FALSE}
+
+Numbered list:
+
+1. wash
+1. rinse
+1. repeat
+
+``` 
+--
+
+1. wash
+1. rinse
+1. repeat
+
+---
+
+## Hyperlinks
+    
+```{r, eval=FALSE}  
+  [Text of the link](URL of the link)
+
+# Example
+  [Markdown syntax](https://www.markdownguide.org/basic-syntax/)
+```
+
+--
+
+  [Markdown syntax](https://www.markdownguide.org/basic-syntax/)
+
+---
+
+## Images
+
+```{r, eval=FALSE}
+  ![Image name](URL of the link - can also be a local file on your computer)
+
+# Example
+  ![](https://i.pinimg.com/originals/1c/b7/24/1cb724b545de717ed0430e9d46e78eea.jpg)
+
+```
+
+--
+
+ ![](https://i.pinimg.com/originals/1c/b7/24/1cb724b545de717ed0430e9d46e78eea.jpg)
+
+---
+
+## Tables
+
+```{r eval=FALSE}
+
+ID | First | Last
+--- | --- | ---
+1 | Donald | Trump
+  
+```
+
+--
+
+ID | First | Last
+--- | --- | ---
+1 | Donald | Trump
+
+---
+layout: false
+
+# Conversion
+
+* [Pandoc](https://pandoc.org/) : command line tool
+* Converts from **md** to **pdf**, **html**, **docx**...
+
+```{r, eval = FALSE}
+# HTML
+> pandoc test1.md -f markdown -t html -s -o test1.html
+
+# pdf
+> pandoc test1.md -s -o test1.pdf
+```
+
+
+```{r echo=FALSE, fig.align="left", fig.cap="", out.width='70%'}
+knitr::include_graphics('img/pandoc.png')
+```
+
+---
+
+layout: true
+
+# Rmarkdown
+
+---
+
+```{r echo=FALSE, out.width='70%'}
+knitr::include_graphics('img/package-rmarkdown-flow.png')
+```
+
+## Mix
+
+* Markdown
+    - paragraph structure
+    - comments
+    - links
+
+* R code ("chunks")
+
+* Output of R code
+
+---
+
+## Flow
+
+```{r echo=FALSE, fig.align="center", fig.cap="", out.width='70%'}
+knitr::include_graphics('img/R-markdown-flow.png')
+```
+
+--
+
+```{r echo=FALSE, fig.align="left", fig.cap="", out.width='10%'}
+knitr::include_graphics('img/package-knitr-logo.png')
+```
+* [knitr](https://yihui.name/knitr/)  
+
+
+---
+
+layout: true
+
+# Your first Rmarkdown file
+
+---
+.student[Who has not been able to install Rmarkdown and Latex ?]
+
+--
+
+```{r echo=FALSE, out.width=c('40%','40%')}
+knitr::include_graphics('img/package-rmarkdown-new-01.png')
+knitr::include_graphics('img/package-rmarkdown-new-02.png')
+```
+
+---
+
+## Knit to HTML
+
+```{r echo=FALSE, out.width='80%'}
+knitr::include_graphics('img/package-rmarkdown-knit.png')
+```
+
+.warning[Save to "xxx.Rmd"]
+
+---
+
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('img/package-rmarkdown-HTML.png')
+```
+
+---
+
+## Knit of pdf
+
+```{r echo=FALSE, out.width='40%'}
+knitr::include_graphics('img/package-rmarkdown-knit-pdf.png')
+```
+
+---
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('img/package-rmarkdown-pdf-output.png')
+```
+
+
+---
+
+layout: true
+
+# The Rmarkdown file
+
+---
+
+## File structure
+
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('img/package-rmarkdown-structure.png')
+```
+
+---
+
+## Knit process
+
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('img/package-rmarkdown-md-window.png')
+```
+
+
+---
+
+## Output
+
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('img/package-rmarkdown-output.png')
+```
+
+---
+
+layout: true
+
+# Chunks
+
+---
+
+## Insert chunk
+
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('img/package-rmarkdown-chunk-01.png')
+```
+
+---
+
+## Options
+
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('img/package-rmarkdown-chunk-options.png')
+```
+
+---
+
+## Useful options
+
+
+Options | Default value | Aim
+--- | --- | ---
+echo | TRUE | Print code (= FALSE in a report for example)
+eval | TRUE | Evaluate code (= FALSE if want to show code only)
+warning  | TRUE | Warning message (= FALSE to remove long warnings)
+message  | TRUE | Messages (= FALSE to remove long messages)
+cache   | FALSE | If TRUE only modified chunks will be evaluated
+   |  |  very useful for computing heavy codes
+fig.height  |  |  inches
+fig.width  |  |  inches
+
+---
+
+## Set defaults options
+
+* Insert in a R chunk at the beginning of your Rmarkdownn file
+
+```{r, eval=FALSE}
+  knitr::opts_chunk$set(fig.width=6, fig.height=6, 
+                        eval=TRUE, 
+                        cache=TRUE,
+                        echo=TRUE,)
+
+```
+
+
+---
+
 layout: true
 
 # What can you do with Rmarkdown ?
+
+---
+## Presentation
+
+.left-column[
+```{r echo=FALSE, fig.cap="", out.width='45%'}
+knitr::include_graphics('img/package-xaringan-logo.png')
+```
+
+]
+
+.right-column[
+
+https://github.com/yihui/xaringan
+ 
+```{r echo=FALSE, fig.cap="", out.width='80%'}
+knitr::include_graphics('img/package-xaringan-example.png')
+```
+]
+
+
+---
+## Posters
+
+.left-column[
+```{r echo=FALSE, fig.cap="", out.width='45%'}
+knitr::include_graphics('img/package-posterdown-logo.png')
+```
+
+]
+
+.right-column[
+
+https://github.com/brentthorne/posterdown
+ 
+```{r echo=FALSE, fig.cap="", out.width='80%'}
+knitr::include_graphics('img/package-posterdown-example.png')
+```
+]
 
 ---
 ## Curriculum vitae
@@ -140,22 +539,26 @@ https://cloud.r-project.org/web/packages/vitae/index.html
 knitr::include_graphics('img/package-vitae-example-02.png')
 ```
 ]
-
 ---
-## Posters
+
+## Website
 
 .left-column[
 ```{r echo=FALSE, fig.cap="", out.width='45%'}
-knitr::include_graphics('img/package-posterdown-logo.png')
+knitr::include_graphics('img/package-blogdown-logo.png')
 ```
 
 ]
 
 .right-column[
 
-https://github.com/brentthorne/posterdown
+https://bookdown.org/yihui/blogdown/
  
-```{r echo=FALSE, fig.cap="", out.width='80%'}
-knitr::include_graphics('img/package-posterdown-example.png')
+```{r, out.width="90%", echo=FALSE, fig.align="center"}
+knitr::include_graphics("img/web-site-dv.png")
 ```
 ]
+
+
+
+
